Configuracion de enlace simbolico a carpeta public_html y agregue copyright

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -27,6 +27,11 @@
                 {% block content %}{% endblock %}
             </div>
         </section>
+        <footer>
+            <div class="container">
+                <p class="text-center">&copy; Prueba Symfony By Emilio Ochoa</p>
+            </div>
+        </footer>
         <script src="{{ asset('js/jquery.js') }}"></script>
         <script src="{{ asset('js/bootstrap.min.js') }}"></script>
         {% block javascripts %}{% endblock %}
